web/styles/index.module.css
.page {
  height: 100vh;
  overflow: hidden;
}

.header {
  position: fixed;
  top: 0;
  width: 100vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header > * {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.header .navLinks > * {
  margin: 0 1em;
  padding: 0.6em 1.2em;
  border-radius: 5px;
}

.header .navLinks > *:hover {
  background-color: rgb(113, 43, 226);
  color: white;
}

.content {
  margin-top: 6em;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.heroPage {
  position: relative;
  left: -5vw;
  border: solid 15px rgb(202, 202, 202);
  border-radius: 6px;
}

.heroPage img {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
}

.announcement {
  margin-left: 4em;
  padding: 1em;
  height: 60vh;
  border: solid 2px rgb(113, 43, 226);
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

/* home */

.homePage {
  overflow: hidden;
}

.homePage .main {
  margin: 4em 2em 0 2em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.featuresContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.arrowAndCalltoAction {
  margin-top: 2em;
  position: relative;
  top: -150px;
  left: 65%;
}

.arrowAndCalltoAction svg {
  transform: rotate(-30deg);
  position: relative;
  top: -90px;
}

.arrowAndCalltoAction p {
  font-family: "Caveat", cursive;
  font-size: 1.4em;
  transform: rotate(1deg);
  position: relative;
  top: -1em;
}

.description {
  font-size: 2em;
  color: black;
  margin: 0 2em;
  text-align: center;
  max-width: 70%;
  word-wrap: break-word;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.pricings {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.extensions {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: 3em 0;
}

@media screen and (min-width: 1200px) {
  .copy {
    max-width: 40vw;
    text-align: center;
  }
  .features {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 5em;
  }
  .pricings {
    display: flex;
    flex-direction: row;
  }
}

@media screen and (min-width: 1000px) {
  .features {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 5em;
  }

  .pricings {
    display: flex;
    flex-direction: row;
  }
}

